k8s/commands-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-commands-service
  template:
    metadata:
      labels:
        app: dotnet-commands-service
    spec:
      containers:
        - name: dotnet-commands-service
          image: peter6/dotnet-commands-service:latest
